マイページでの予約一覧取得機能のSwaggerスキーマを追加する
